# SkyhawksBot

./: .replit  email_utils.py  faq.py  generated_presentation.pptx  main.py  manager_reminder.py  onboarding.py  pdfchat.py  pdfreader.py  poll.py  pptx_generator.py  pyproject.toml  text_image.py
indexdir/: MAIN_3fh2secdaivr1ep8.seg  MAIN_c0jjsdzuqmouwhkb.seg  MAIN_dnpkuhseq8j9fste.seg  MAIN_f60ypbx99qbxkbjx.seg  MAIN_hp9axgnxa0khgw0r.seg  MAIN_ihdixomlnv9zyapw.seg  MAIN_mrquctz9etbyiobc.seg  MAIN_xb46vxiadmofvhki.seg  _MAIN_672.toc
