[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
"discord.py" = "2.2.2"
google-auth = "2.17.2"
google-auth-oauthlib = "1.0.0"
google-auth-httplib2 = "0.1.0"
google-api-python-client = "2.84.0"
openai = "0.27.4"
discord = "^2.2.2"
xds-protos = "^0.0.11"
pytz = "^2023.3"
pdfplumber = "0.8.1"
beautifulsoup4 = "4.12.2"
email-validator = "1.3.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"