[tool.poetry]
name = "repl_nix_SkyhawksDiscordBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-auth-oauthlib = "^1.0.0"
openai = "^0.27.4"
pytz = "^2023.3"
xds-protos = "^0.0.11"
discord = "^2.2.2"
google-api-python-client = "^2.86.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
